Updates, includes move to local ActiveMQ broker